# voc-pipeline-ui

./: .gitignore  ANALYST_VOC_REPORT_GUIDE.md  Analyst_Workbook_V2.1_Supio.xlsx  Analyst_Workbook_V2_Supio.xlsx  CLEANUP_FINAL_SUMMARY.md  CLEANUP_PROGRESS.md  CLEANUP_STRATEGY.md  CLIENT_CHAT_DEPLOYMENT.md  CLIENT_ID_UX_IMPLEMENTATION.md  COMPETITIVE_INTELLIGENCE_INTEGRATION_GUIDE.md  COST_BREAKDOWN.md  COST_OPTIMIZATION_SUMMARY.md  COVERAGE_FIXES_SUMMARY.md  CURATION_IMPLEMENTATION_SUMMARY.md  DATABASE_COMPARISON.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DIVERSITY_SOLUTION_SUMMARY.md  Demo Analyst Workbook.xlsx  Demo Analyst Workbook_CLEAN.xlsx  Demo Analyst Workbook_FINAL.xlsx  Demo Analyst Workbook_FIXED.xlsx  Demo Analyst Workbook_GROUPED.xlsx  Demo Analyst Workbook_STYLED.xlsx  Demo Analyst Workbook_THEMES_FROM_TEMPLATE.xlsx  Demo Analyst Workbook_THEMES_NUMBERS.xlsx  Demo Analyst Workbook_THEMES_NUMBERS_FINAL.xlsx  Demo Analyst Workbook_THEMES_NUMBERS_FIXED.xlsx  Demo Analyst Workbook_THEMES_NUMBERS_O11.xlsx  Demo Analyst Workbook_THEMES_NUMBERS_O11_FINAL.xlsx  Demo Analyst Workbook_THEMES_READY.xlsx  Demo Analyst Workbook_THEMES_READY_FIXED.xlsx  Demo Analyst Workbook_THEMES_READY_FIXED2.xlsx  Demo Analyst Workbook_THEMES_READY_NAMED.xlsx  Demo Analyst Workbook_THEMES_TWO_DECISIONS.xlsx  Demo Analyst Workbook_THEMES_WITH_SECTION.xlsx  Demo Analyst Workbook_backup.xlsx  Demo_Analyst_Workbook_FINAL.xlsx  Discussion_Guide_First_Workbook.xlsx  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  (+701 more)
Context/: Buried Wins Finding Product Standard.txt  Buried Wins Interviews (2).csv  (+45 more)
(+227 files in other folders)
