[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voc-pipeline-ui"
version = "0.1.0"
description = "VoC Pipeline UI and CLI tools"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = [
  "streamlit==1.46.1",
  "streamlit-authenticator==0.4.2",
  "bcrypt>=4.0.0",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.0",
  "python-docx>=0.8.11",
  "langchain-community>=0.3.0",
  "openai>=1.0.0",
  "fire>=0.5.0",
  "pinecone>=2.0.0",
  "langchain-openai>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain>=0.3.0",
  "docx2txt>=0.9",
  "langchain-core>=0.3.0"
]

[project.scripts]
voc-pipeline = "voc_pipeline.processor:main" 